--- a/ExpenseTrackerApp.html
+++ b/ExpenseTrackerApp.html
@@ -42,6 +42,6 @@
                     <li class="item">Item 3</li>
                 </ul> -->
             </section>
-            <script src="Expense tracker app.js"></script>
+            <script src="ExpenseTrackerApp.js"></script>
     </body>
 </html>
